# tomliptrot.github.io

./: CNAME  Gemfile  README.md  Thumbs.db  _config.yml  about.md  blog.md  contact.md  faq.md  feed.xml  index.html  index.html~  index.md  main.css  main.css~  new-post.sh  newsletter.py  publications.html  pyproject.toml  services.md
_data/: navbar.yml
_drafts/: 2019-03-15-What-is-Data-Science?.markdown  2019-07-12-data-version-control.markdown  2019-07-12-perfect-prediction.markdown  2019-10-03-how-to-use-LIME-with-KERAS-in-R.markdown  2019-10-03-updating-r-in-ubuntu.markdown  2019-10-08-Using-FastAPI-for-Data-Science-in-Python.markdown  data-fest-2019.md  how-can-data-science-help-my-business.md  odscnotes.md  pitch.md  predictive-modelling-101.md  strava-data-manchester-marathon.md  what-is-ai.md
_includes/: footer.html  head.html  header.html  newsletter.html
_layouts/: default-nowrapper.html  default.html  home.html  page-withnewsletter.html  post.html
_pages/: about.md  blog.md  contact.html  contact.md  cv.html  services.md
_posts/: 2019-02-22-data-fest-2019.md  2019-03-14-hello-world.markdown  2019-03-15-Welcome-to-Ortom.markdown  2019-03-15-What-is-Data-Science?.markdown  2019-03-29-What-is-Data-Science?.markdown  2019-07-12-How-to-do-feature-engineering-in-R-with-the-recipes-package.md  2019-09-04-machine-learning-101-talk.md  2019-09-26-CRAP-talk-on-machine-learning.md  2019-10-31-My-attempt-at-standup-comedy.markdown  2019-11-19-4-Things-I-Learnt-at-ODSC-Europe-2019-(you-may-disagree-with-4).markdown  post_template.md
_sass/: minima.scss
(+164 files in other folders)
