[tool.poetry]
name = "tomliptrot.github.io"
version = "0.1.0"
description = ""
authors = ["Tom Liptrot <tom@ortom.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
bs4 = "^0.0.1"
timefhuman = "^0.0.5"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
