[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = ""
authors = ["Tom Liptrot <tom@ortom.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
bs4 = "^0.0.1"
timefhuman = "^0.0.5"
python-frontmatter = "^1.0.0"
ipython = "^7.22.0"
typer = "^0.3.2"
mailchimp-transactional = "^1.0.31"
mailchimp-marketing = "^3.0.54"
markdown2 = "^2.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
newsletter = "newsletter.newsletter:main"